2016-01-06  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/trainer.pyx (train): initialize AdaGrad accumulators by adaEps.

	* deepnl/extractors.pyx (Extractor.adaGradInit): initialize with adaEps.

	* bin/dl-conv.py (main): added option --eps.

2015-12-24  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/networkconv.pyx (backpropagate): use MultiMarginCriterion
	also for computing gradients.

2015-12-18  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/utils.py (create_feature_tables): removed.

	* bin/dl-sentiwords.py (create_trainer): consider parameter --window
	as left/right context, consistently with word2vec.
	* bin/dl-conv.py (main): idem.
	* bin/dl-ner.py (main): idem.
	* bin/dl-pos.py (main): idem.
	* bin/dl-words.py (main): idem.

2015-11-18  Giuseppe Attardi  <attardi@di.unipi.it>

	* bin/dl-conv.py (main): added options text_field and label_field
	to select fields from tsv input files.

	* deepnl/network.pyx (ConvolutionalNetwork.backpropagate):
	in np.where condition > -1.

	* deepnl/networkconv.pyx (ConvolutionalNetwork.backpropagate): use
	MultiMarginCriterion
	in np.where condition > -1.

	* deepnl/classifier.pyx (Classifier.predict: use argmax(vars.output)

2015-11-04  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/network.pyx (Network.backpropagate): grads.hiddenx_bias
	instead of vars.hidden_bias.

2015-10-14  Giuseppe Attardi  <attardi@di.unipi.it>

	* bin/dl-sentiwords.py (main): pass minOccurr and vocab_size to reader.create_vocabulary.

2015-10-08  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/networkseq.pyx (SeqParameters.initialize): put back high to 1.0.

2015-10-07  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/trainerconv.pyx (ConvTrainer): holds a Classifier, which
	saves to file after training.

	* deepnl/utils.py (import_class): added.

2015-10-05  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/sentiwords.pyx (SentimentTrainer._train_pair_s): compute
	also grads.input.
